# particles

./: AppSettings.qml  CMakeLists.txt  CustomLabel.qml  CustomSlider.qml  SettingsView.qml  main.cpp  main.qml  qml.qrc
